--- a/src/main/resources/templates/announcement/announcements.html
+++ b/src/main/resources/templates/announcement/announcements.html
@@ -2,15 +2,20 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
 <head th:replace="fragments/head :: head"></head>
+
 <body>
 
 <!-- Behaviour -->
-<!--<script sec:authorize="hasRole('ADMIN')">-->
-<!--  $(document).on("click", ".open-delete-dialog", function () {-->
-<!--    $("#deleteId").val($(this).data('id'));-->
-<!--  });-->
-<!--</script>-->
+<script sec:authorize="hasRole('ADMIN')">
+  $(document).on("click", ".open-delete-dialog", function () {
+    $("#deleteId").val($(this).data('id'));
+  });
+</script>
 <!-- EO: Behaviour-->
 
 <!-- Navbar -->
@@ -35,15 +40,15 @@
             </em>
           </small>
         </div>
-<!--        <div sec:authorize="hasRole('ADMIN')">-->
-<!--          <button type="button"-->
-<!--                  class="open-delete-dialog btn btn-primary"-->
-<!--                  data-toggle="modal"-->
-<!--                  data-target="#deleteModal"-->
-<!--                  th:data-id="*{id}">-->
-<!--              <i class="fas fa-trash mx-1"></i>-->
-<!--          </button>-->
-<!--        </div>-->
+        <div sec:authorize="hasRole('ADMIN')">
+          <button type="button"
+                  class="open-delete-dialog btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#deleteModal"
+                  th:data-id="*{id}">
+              <i class="fas fa-trash mx-1"></i>
+          </button>
+        </div>
       </div>
     </div>
     <div class="card-body">
@@ -53,16 +58,16 @@
   </div>
 </div>
 
-<!--<div sec:authorize="hasRole('ADMIN')">-->
-<!--  <a class="new-button btn btn-primary rounded-circle" th:href="@{/announcements/new}" role="button">-->
-<!--    <i class="fas fa-plus"></i>-->
-<!--  </a>-->
-<!--</div>-->
+<div sec:authorize="hasRole('ADMIN')">
+  <a class="new-button btn btn-primary rounded-circle" th:href="@{/announcements/new}" role="button">
+    <i class="fas fa-plus"></i>
+  </a>
+</div>
 
 <!-- Delete announcement-->
-<!--<div sec:authorize="hasRole('ADMIN')" th:replace="announcement/delete :: delete-announcement">-->
-<!--  Modal dialog for delete-->
-<!--</div>-->
+<div sec:authorize="hasRole('ADMIN')" th:replace="announcement/delete :: delete-announcement">
+  Modal dialog for delete
+</div>
 <!-- EO: Delete announcement-->
 
 <!-- Bootstap JS -->
